syntax = "proto3";

package item;

message ItemRequest {
    string item_id = 1;
}

message Item {
    string item_id = 1;
    int32 price = 2;
}

service ItemService {
    rpc GetItem(ItemRequest) returns (Item);
}
